fix(homepage): sets hero to image instead of cropped background and fixes circle positioning on mobile

--- a/source/templates/pages/homepage.sass
+++ b/source/templates/pages/homepage.sass
@@ -1,34 +1,34 @@
-main
-	background-image: url(../source/graphics/homepage-background-001.jpg)
-	background-position: top center
-	background-repeat: no-repeat
-	background-size: cover
-	height: 125vh
-
+.hero-container
 	position: relative
 
-h1.golden-circle
-	font-size: 1rem
+	img
+		width: 100%
+		display: block
 
-.golden-circle
-	position: absolute
-	bottom: 10rem
-	background-color: $gold
-	width: 15rem
-	height: 15rem
-	border-radius: 50%
-	color: white
-	text-shadow: 0 0 .5rem rgba(0, 0, 0, 0.25)
+	h1.golden-circle
+		font-size: 1rem
 
-	right: 0
-	left: 0
-	margin: auto
-	@media (min-width: 30rem)
+	.golden-circle
+		position: absolute
+		background-color: $gold
+		width: 15rem
+		height: 15rem
+		border-radius: 50%
+		color: white
+		text-shadow: 0 0 .5rem rgba(0, 0, 0, 0.25)
+
+		top: 0
+		bottom: 0
 		right: 4rem
-		margin: 0
+		margin: auto
 
-	.inner-container
-		@include absolute-center
-		font-size: 2rem
-		height: 6.5rem
-		text-align: center
+		@media (min-width: 60rem)
+			top: initial
+			bottom: 10rem
+			margin: 0
+
+		.inner-container
+			@include absolute-center
+			font-size: 2rem
+			height: 6.5rem
+			text-align: center
